--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha --timeout 15000 -c dist/controllers/test.authController.js -R nyan",
     "start": "node dist/index.js",
-    "dev": " nodemon dist/index.js ",
+    "build": "rm -rf dist && npx tsc -p tsconfig.json",
+    "dev": "concurrently \"npx tsc -w\" \"nodemon -q dist/index.js\"",
     "lint": "eslint src/**/*.{js,ts,json}",
     "lint:fix": "eslint --fix 'src/**/*.{ts,json}'",
     "format": "prettier --write src/**/*.ts --config ./.prettierrc"
@@ -19,6 +20,7 @@
     "@types/pug": "^2.0.6",
     "bcrypt": "^5.0.1",
     "chai": "^4.3.6",
+    "concurrently": "^7.3.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "googleapis": "^104.0.0",
